Fix alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,10 @@
   color: white;
 }
 
-.action-button {
+.action-button{
   margin: 0.5rem;
+}
+
+.nav-cust-header{
+  margin: 1rem;
 }
